# whats-the-backup

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-desktop.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.mjs
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ChatSidebar.tsx  ChatView.tsx  MessageBubble.test.tsx  MessageBubble.tsx
apps/desktop/src/lib/: attachment-cache.ts  tauri-api.ts  types.ts
apps/desktop/src/test/: setup.ts
