[package]
name = "whats-the-backup"
version = "0.1.0"
description = "Desktop viewer for WhatsApp exports"
authors = ["Whats The Backup contributors"]
license = "MIT"
repository = "https://github.com/DMLatrofa/whats-the-backup"
homepage = "https://github.com/DMLatrofa/whats-the-backup"
edition = "2021"

[lib]
name = "whats_the_backup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.2", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.4.0"
walkdir = "2.5"
zip = "2.4.2"

